Changes to regular site

--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
+<!DocType html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Hey issa HTML</title>
+<title> Hello My Guy</title>
 </head>
 <body>
-<h1>AYYYYY</h1>
-dope
+<h1> YESSIR Love it</h1>
 </body>
 </html>
