--- a/Module-4-Solution/index.html
+++ b/Module-4-Solution/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-   
+   <meta charset="utf-8">
     <title>Module 4</title>
     <script src="js/SpeakHello.js"></script>
     <script src="js/SpeakGoodBye.js"></script>
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <h1>Module 4 Solution Starter</h1>
     <h1>Also Check Console :)</h1>
    
 </body>
